--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ Debug
 /testClass/.vs/testClass/v15/Solution.VC.db-wal
 /testClass/.vs/testClass/v15/ipch/AutoPCH/c3b9ab75c4c35010/TESTCLASS.ipch
 .vs
+Debug
